force-app/main/default/objects/Question__c/Question__c.object-meta.xml
<CustomObject>
    <description>This object represents the questions for exams.</description>
    <label>Question</label>
    <nameField>
        <displayFormat>QUE-{000000000}</displayFormat>
        <label>Question Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>