force-app/main/default/objects/Question__c/fields/Correct_Option__c.field-meta.xml
<CustomField>
    <fullName>Correct_Option__c</fullName>
    <label>Correct Option</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>