force-app/main/default/objects/Question__c/fields/Negative_Marks__c.field-meta.xml
<CustomField>
    <fullName>Negative_Marks__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Negative Marks</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>