force-app/main/default/objects/Question__c/fields/Positive_Marks__c.field-meta.xml
<CustomField>
    <fullName>Positive_Marks__c</fullName>
    <label>Positive Marks</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>