force-app/main/default/objects/Question__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>