force-app/main/default/objects/Question__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Question_Name__c</columns>
    <columns>Subject__c</columns>
    <columns>Status__c</columns>
    <columns>Positive_Marks__c</columns>
    <columns>Negative_Marks__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>